--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "xlsx": "^0.18.5"
   }
 }
